--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,1 @@
-1-Intro/.terraform/providers/registry.terraform.io/hashicorp/local/2.2.3/linux_amd64/terraform-provider-local_v2.2.3_x5
-1-Intro/.terraform.lock.hcl
+**/.terraform*
